juice-shop-helm/juice-shop-helm-hydrated/juice-shop/templates/deployment.yaml
---
# Source: juice-shop/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: RELEASE-NAME-juice-shop
  labels:
    helm.sh/chart: juice-shop-0.1.0
    app.kubernetes.io/name: juice-shop
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: juice-shop
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      labels:
        app.kubernetes.io/name: juice-shop
        app.kubernetes.io/instance: RELEASE-NAME
    spec:
      serviceAccountName: RELEASE-NAME-juice-shop
      securityContext:
        {}
      containers:
        - name: juice-shop
          securityContext:
            {}
          image: "notronswanson/juice-shop:v2.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
