juice-shop-helm/juice-shop-helm-hydrated/juice-shop/templates/service.yaml
---
# Source: juice-shop/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: RELEASE-NAME-juice-shop
  labels:
    helm.sh/chart: juice-shop-0.1.0
    app.kubernetes.io/name: juice-shop
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: juice-shop
    app.kubernetes.io/instance: RELEASE-NAME
