juice-shop-helm/juice-shop-helm-hydrated/juice-shop/templates/route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: juice-shop 
  labels:
    name: juice-shop
spec:
  path: "/"
  to:
    kind: Service
    name: RELEASE-NAME-juice-shop
